--- a/src/pages/contact/index.scss
+++ b/src/pages/contact/index.scss
@@ -425,6 +425,7 @@
                     padding: 0;
                     background-color: transparent;
                     box-shadow: none;
+                    width: 100%;
                     p {
                         color: #fff;
                     }
