--- a/src/components/finish/progress/styles.css
+++ b/src/components/finish/progress/styles.css
@@ -1,11 +1,13 @@
 .circular-progress {
   --size: 160px;
   --half-size: calc(var(--size) / 2);
-  --stroke-width: 16px;
+  --stroke-width: 20px;
   --radius: calc((var(--size) - var(--stroke-width)) / 2);
   --circumference: calc(var(--radius) * pi * 2);
   --dash: calc((var(--progress) * var(--circumference)) / 100);
-  animation: progress-animation 5s linear 0s 1 forwards;
+  position: absolute;
+  inset: 0;
+  z-index: 0;
 }
 
 .circular-progress circle {
@@ -20,27 +22,5 @@
 
 .circular-progress circle.bg {
   stroke: #ddd;
-}
-
-.circular-progress circle.fg {
-  transform: rotate(-90deg);
-  transform-origin: var(--half-size) var(--half-size);
-  stroke-dasharray: var(--dash) calc(var(--circumference) - var(--dash));
-  transition: stroke-dasharray 0.3s linear 0s;
-  stroke: #5394fd;
-}
-
-@property --progress {
-  syntax: "<number>";
-  inherits: false;
-  initial-value: 0;
-}
-
-@keyframes progress-animation {
-  from {
-    --progress: 0;
-  }
-  to {
-    --progress: 80;
-  }
+  color: transparent;
 }
